# ai-architect-4-weeks

./: .env.example  .gitignore  AGENTS.md  CONSTITUTION.md  DAY-4-SUMMARY.md  DAY-5-SUMMARY.md  LEARNING-SPRINT.md  Makefile  NEXT-STEPS.md  PREREQUISITES.md  PROJECT-STATUS.md  PULL-REQUESTS.md  QUICK-START.md  READING-GUIDE.md  README.md  STACKED-PRS.md  SUMMARY.txt  WEEK-1-CHECKLIST.md  WEEK-1-COMPLETION.md  WEEK-1-CONCEPTS.md  WEEK-1-SUMMARY.md  WEEK-2-CHECKLIST.md  WEEK-2-COMPLETE.md  WEEK-2-DEPLOYMENT.md  WEEK-2-START.md  WEEK-2-SUMMARY.md  WEEK-3-CHECKLIST.md  WEEK-4-CHECKLIST.md  pyproject.toml  requirements-week2.txt  requirements.txt
backlog/: config.yml
backlog/tasks/: task-0.1 - Week-0-Path-A-Fast-Track-Skip-Prep-Start-Week-1.md  task-0.2 - Week-0-Path-B-Relaxed-Prep-30-min-day-1-Week.md  task-0.3 - Week-0-Path-C-Focused-Prep-3-Day-Sprint.md  task-1 - Week-1-RAG-Foundation-Build-Ship-Running-RAG-API.md  task-1.1 - Week-1-Day-1-Foundation-Environment-Setup.md  task-1.2 - Week-1-Day-2-Document-Ingestion-Chunking.md  task-1.3 - Week-1-Day-3-Embeddings-Retrieval.md  task-1.4 - Week-1-Day-4-Prompt-Template-Full-RAG-Pipeline.md  task-1.5 - Week-1-Day-5-Architecture-Docs-Checkpoint.md  task-2 - Week-0-Prerequisites-Self-Assessment.md  task-3 - Week-2-Day-1-Vector-DB-Setup-Migration-Weaviate.md  task-4 - Week-2-Day-2-Chunking-Strategies-Metadata-Filtering.md  task-5 - Week-2-Day-3-Reranking-Retrieval-Evaluation.md  task-6 - Week-2-Day-4-Caching-Performance-Tuning.md  task-7 - Week-2-Day-5-Checkpoint-Latency-Report.md
data/: sample.txt
docs/: architecture.md  local-llm.md  retrieval-metrics.json  trade-offs.md
specs/001-week1-rag-completion/: PHASE-0-1-COMPLETION.md  PHASE-1-SUMMARY.md  PHASE-2-COMPLETION.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-week1-rag-completion/checklists/: requirements.md
specs/001-week1-rag-completion/contracts/: openapi.yaml  schemas.json
week-1/: __init__.py  generation.py  ingestion.py  main.py  retrieval.py  test_rag.py
week-2/: caching.py  chunking_strategies.py  evaluate_retrieval.py  reranking.py  test_caching.py  test_reranking.py  vector_db.py
week-3/: README.md
week-4/: README.md
