[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-architect-4weeks"
version = "0.1.0"
description = "4-week AI architect sprint: Building production RAG systems"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AI Architect", email = "dev@example.com"}
]
requires-python = ">=3.11"
keywords = ["rag", "llm", "embeddings", "retrieval-augmented-generation"]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "python-dotenv==1.0.0",
    "langchain==0.1.0",
    "openai==1.3.5",
    "numpy==1.24.3",
    "pydantic==2.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "ruff==0.1.8",  # Fast linter (Astral)
]

[project.urls]
Repository = "https://github.com/jellydn/ai-architect-4-weeks"
Issues = "https://github.com/jellydn/ai-architect-4-weeks/issues"

[tool.uv]
# uv configuration for faster dependency resolution
python-version = "3.11"

[tool.pytest.ini_options]
testpaths = ["week-1"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I"]  # Error, Pyflakes, isort
