[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-architect-4weeks"
version = "0.1.0"
description = "4-week AI architect sprint: Building production RAG systems"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AI Architect", email = "dev@example.com"}
]
requires-python = ">=3.11"
keywords = ["rag", "llm", "embeddings", "retrieval-augmented-generation"]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.0",
    "openai>=1.0.0",
    "numpy>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.urls]
Repository = "https://github.com/jellydn/ai-architect-4-weeks"
Issues = "https://github.com/jellydn/ai-architect-4-weeks/issues"

[tool.hatch.build.targets.wheel]
packages = ["week-1", "week-2"]

[tool.pytest.ini_options]
testpaths = ["week-1", "week-2"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ty.environment]
extra-paths = ["week-1"]
